# agent

./: .gitignore  GEMINI_LIVE_INTEGRATION.md  GEMINI_LIVE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  TESTING_GUIDE.md
backend/: .env  gemini_live_client.py  main.py  pyproject.toml  test_provider_bug.py  ws_test_client.py
backend/agents/: service_agent.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: FoodSelection.tsx  GeminiLiveVoice.tsx  ISLAvatar.tsx  VoiceControls.tsx  WebcamCapture.tsx
