[project]
name = "isl-service-mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.2",
    "google-cloud-aiplatform>=1.138.0",
    "google-cloud-texttospeech>=2.34.0",
    "google-genai>=1.64.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.2.10",
    "langchain-core>=1.2.14",
    "langchain-google-genai>=4.2.1",
    "langchain-google-vertexai>=3.2.2",
    "langdetect>=1.0.9",
    "langgraph>=1.0.9",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
    "websockets>=15.0.1",
]
